HeaderComponent - Resolved width overflow stlying

--- a/src/components/header/HeaderComponent.css
+++ b/src/components/header/HeaderComponent.css
@@ -5,7 +5,7 @@
     left: 0px;
 
     height: var(--header-height);
-    width: 100vw;
+    width: calc(100vw - calc(2* 0.5rem));
     min-width: 250px;
 
     background-color: var(--header-bg-color);
